--- a/cicd/cicd-common.properties
+++ b/cicd/cicd-common.properties
@@ -1,6 +1,6 @@
 # container image info
 image_registry=docker.io
-image_project=happykbfg
+image_project=kb03
 image_repository=scg
 image_tag=0.0.1
 
@@ -11,7 +11,7 @@ limit_cpu=1024m
 limit_mem=1024Mi
 
 # namespace, sa
-namespace=kb05
+namespace=kb03
 serviceaccount=sa-${namespace}
 
 # Service info
